syntax = "proto3";

option java_multiple_files = true;
option java_package = "registerserverstubs";

package registerserverservice; // package do proto



// Serviço de registo de servidores
service RegisterServerService {
  // Registar um servidor Server com o servidor Register
  rpc registerServer(ServerInfo) returns (ServerResponse);

  // Obter o próximo servidor a ser contactado
  rpc getNextServer (ServerInfo) returns (NextServer);

}

message ServerInfo {
  string server_id = 1;
  string ip = 2;
  int32 port = 3;
}


message Empty {}

// Mensagem de resposta do servidor Register
message ServerResponse {
  string response = 1;
}

message NextServer {
  int32 nextServerPort = 1;
  string nextServerIP = 2;
}






